# Alert-And-Notification-Platform

./: .gitignore  CMakeLists.txt  README.md
include/: Alert.h  AlertManager.h  Analytics.h  Common.h  NotificationDelivery.h  Team.h  User.h  UserAlertPreference.h
include/nlohmann/: json_fwd.hpp
src/: Alert.cpp  AlertManager.cpp  Common.cpp  NotificationDelivery.cpp  Team.cpp  User.cpp  UserAlertPreference.cpp  main-new.cpp  main.cpp
